# double-jig-gen

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  README.md  clean_data.ipynb  compare.ipynb  dqa_new_scrape.ipynb  eval.ipynb  experiments.txt  experiments_2020.txt  get_and_split_folkrnn_data.py  metrics_dev.ipynb  metrics_from_features.ipynb  pyproject.toml  setup.cfg  train.ipynb  train.py  web_scraper.ipynb
_scratch/: data_v3_test_split.txt  data_v3_train_split.txt  data_v3_valid_split.txt  data_v3_vocabulary.txt
data/: oneills_reformat.abc
docs/: abc_reference.ipynb  data_exploration.ipynb  folk-rnn_notes.ipynb  plotting.py  tables.py
double_jig_gen/: __init__.py  data.py  datasets.py  features.py  io.py  metrics.py  models.py  tokenizers.py  utils.py
scripts/: dj-gen-download-data  dj-gen-download-folkrnn-data  dj-gen-features  dj-gen-get-data  dj-gen-get-vocab-and-make-splits  dj-gen-scrape-thesession  dj-gen-tokenize-abc
tests/: test_data.py  test_datasets.py  test_io.py  test_tokenizers.py
tests/data/: valid_abc.abc
