[metadata]
name = double_jig_gen
version = 2020.09.03rc
licence = MIT
url = https://github.com/JamesOwers/double-jig-gen
author = James Owers
author_email = james.f.owers@gmail.com
keywords = MIDI music machine-learning folk
description = Models to generate double jigs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
# please keep package list sorted
install_requires =
    numpy
    pandas
    pytorch-lightning
    tqdm
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
python_requires =
    ~=3.6
packages = find:

[options.extras_require]
# please keep package lists sorted
dev =
    %(docs)s
    black
    flake8
    isort
    ipykernel
    jupyter_contrib_nbextensions
    mypy
    nodejs
    pre-commit
    pylint
    pytest
    pytest-cov
docs =
    jupyterlab
    matplotlib
    music21
    seaborn

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --cov

[easy_install]
index_url = https://pypi.org/simple/

[flake8]
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, F403, F401
